<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.view.MTextView
            android:id="@+id/subTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text=""
            android:textColor="#363636"
            android:textSize="@dimen/_17ssp"
            android:visibility="visible"
            app:customTypeFace="@string/systemSemiBold" />
        <ImageView
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_alignParentEnd="true"
            android:id="@+id/cancelImg"
            app:srcCompat="@drawable/ic_clear"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"/>
    </RelativeLayout>

    <!--android:drawableEnd="@drawable/ic_down_arrow"-->
    <androidx.appcompat.widget.AppCompatSpinner
        android:visibility="gone"
        android:id="@+id/declineReasonsSpinner"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        style="@style/decline_order_spinner_style"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:theme="@style/ThemeSpinner"
        />

    <RelativeLayout
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <com.view.MTextView
          android:id="@+id/declinereasonBox"
          app:customTypeFace="@string/systemRegular"
          android:paddingStart="@dimen/_5sdp"
          android:paddingEnd="@dimen/_25sdp"
          android:gravity="start|center_vertical"
          tools:text="Reason "
          android:layout_width="match_parent"
          android:minHeight="@dimen/_35sdp"
          android:layout_height="wrap_content">

      </com.view.MTextView>
        <ImageView
            android:id="@+id/arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/down_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@color/gray_holo_light"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"/>

    <RelativeLayout
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"

        android:id="@+id/commentArea"
        android:layout_height="@dimen/_80sdp"
        android:layout_width="wrap_content"
        android:layout_above="@+id/btnArea"
        android:layout_marginBottom="@dimen/_15sdp"
        android:visibility="gone">

        <include
            android:id="@+id/inputBox"
            layout="@layout/editbox_form_design"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.view.MTextView

            android:id="@+id/cancelTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="Cancel"
            android:textAllCaps="true"
            android:textColor="@color/appThemeColor_1"
            android:textSize="@dimen/_16ssp"
            app:customTypeFace="@string/systemMediumFont" />

        <com.view.MTextView
            android:id="@+id/submitTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_border"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="OK"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:customTypeFace="@string/systemMediumFont" />

    </LinearLayout>

</LinearLayout>